--- a/install_apache.yaml
+++ b/install_apache.yaml
@@ -7,12 +7,15 @@
   - name: update repository index
     apt:
       update_cache: yes
+    when: ansible_distribution in ["Debian", "Ubuntu"]
 
   - name: install apache2 package
     apt:
       name: apache2
+    when: ansible_distribution in ["Debian", "Ubuntu"]
 
   - name: install apache php mod
     apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution in ["Debian", "Ubuntu"]
