add condition using when to detect distribution

--- a/install_apache.yaml
+++ b/install_apache.yaml
@@ -19,3 +19,18 @@
       name: libapache2-mod-php
       state: latest
     when: ansible_distribution in ["Debian", "Ubuntu"]
+
+  - name: update repository index
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: install apache2 package
+    dnf:
+      name: httpd
+    when: ansible_distribution == "CentOS"
+
+  - name: install apache php mod
+    dnf:
+      name: php
+    when: ansible_distribution == "CentOS"
